if (ENABLE_CLEANLOOKS)
    add_subdirectory(cleanlooks)
endif()
if (ENABLE_GTK2 AND GTK2_FOUND AND X11_FOUND)
    add_subdirectory(gtk2)
endif()
if (ENABLE_GTK3 AND GTK3_FOUND AND X11_FOUND)
    add_subdirectory(gtk3)
endif()
if (ENABLE_KFUSION)
    add_subdirectory(kfusion)
endif()
if (ENABLE_PLASTIQUE)
    add_subdirectory(plastique)
endif()
